# z-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  GEMINI.md  LICENSE  MEMORY.md  Makefile  PROVIDER-LIST.md  README.md  ROADMAP.md  SECURITY.md  Z-PLATFORM.md  auto-fix-all.sh  compose.yml  docker-compose.phase6.yml  execution-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-automated-gate-installer.sh
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md  config.toml  context.md
.github/: FUNDING.yml  dependabot.yml
agents/: a11y-architect.md  architect.md  brain-memory-agent.md  build-error-resolver.md  chief-of-staff.md  code-architect.md  code-explorer.md  code-reviewer.md  code-simplifier.md  comment-analyzer.md  conversation-analyzer.md  cpp-build-resolver.md  cpp-reviewer.md  csharp-reviewer.md  dart-build-resolver.md  database-reviewer.md  django-build-resolver.md  django-reviewer.md  doc-updater.md  docs-lookup.md  e2e-runner.md  fastapi-reviewer.md  flutter-reviewer.md  fsharp-reviewer.md  gan-evaluator.md  gan-generator.md  gan-planner.md  go-build-resolver.md  go-reviewer.md  harmonyos-app-resolver.md  (+34 more)
apps/zaicoder/backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt
apps/zaicoder/backend/src/zaicoder/: __init__.py  cli.py  gateway_client.py  mcp_connector.py  model_preflight.py  streaming.py
apps/zaicoder/backend/tests/: test_gateway_client.py  test_mcp_connector.py  test_model_preflight.py  test_streaming.py
(+415 files in other folders)
