[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zaicoder"
version = "1.30.0"
description = "Z Platform coding-agent backend"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
zaicoder = "zaicoder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
